# i-msa-misc

./: .gitignore  README.md
ppr-spend/: README.md  pyproject.toml
ppr-spend/data/: data_directory.xlsx
ppr-spend/data/clean/: pop_by_income_group_2021.csv  ppr_spend_table_millions.csv
ppr-spend/notebooks/: 1_nha_data.ipynb  2_clean_income_groups.ipynb
universal-flu-vaccine/: README.md  pyproject.toml
universal-flu-vaccine/data/: data_directory.xlsx
universal-flu-vaccine/notebooks/: flu_vaccine_rates.ipynb  universal_flu_vaccine_candidates.ipynb
