[project]
name = "ppr-spend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ppr_spend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
