[project]
name = "universal-flu-vaccine"
version = "0.1.0"
description = ""
authors = [
    {name = "sq46",email = "squaade@uchicago.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
